launchpadcss.css
/*applies san serif font to all text*/
* {
    font-family: sans-serif;
}
/*the page is set to a light color background*/
html {
    background-color: #F2F2F2;
}

/*makes it so page does not stretch past 1000px*/
#wrapper {
    max-width: 1000px;
    margin: 0 auto;
}

/*left align h1, makke it blue, apply a dotted border along the bottom, have .5em of space from the top of the page, 
6em from the left, 2em from the right, and add 4px of padding between the bottom of the heading and the border*/
h1{
    padding-top: .5em;
    text-align: left;
    color: #4eadd8;
    font-size: 3em;
    margin-left: 6em;
    margin-right: 2em;
    padding-bottom: 4px;
    border-bottom: 2px dotted #8DA4AD;
}

/* push the igme230 heading to the right side of the page and remove bolding. Set top margin to 0 so it aligns with the p element, 
put 3em of space between the h2 and the right side of the page, and .5em padding on the bottom to seperate from the projects and exercises */
h2 {
    font-size: 2em;
    float: right;
    margin-top: 0px;
    color: #C0C6C9;
    margin-right: 3em;
    font-weight: normal;
 
}

/*Change the font size of the exercises and projects headers, add a 1em top margin to put even more space between the h3 and the
 p and h2 elements*/
h3 {
    margin-top: 100px;
    color:  #A2BCC7;
    margin-bottom: 50px;
}

/*Ajust text size, align the text to the left. A left margin is used to line the p up with the h1. Bottom padding seperates p from
the h3 elements. Set top margint to 0 to fix an alignment problem*/
p {
    font-size: 1.5em;
    text-align: left;
    margin-top: 0px;
    color: #C0C6C9;
    margin-left: 12em;
    padding-bottom: .5em;
}

/*used the border radius to turn the image into a circle, put a margin to add some white space between the img and left side of the
page. Float it to the left so it will sit beside the h1, p, and h3 elements. Used the padding all around to push border out to create
a dotted frame around the image*/
img {
    border-radius: 50%;
    margin-left: 2em;
    padding: .5em;
    border: 2px dotted #8DA4AD;
    float: left;
}

/*Set text color to white, and put a 1em margin all around and a 10em line height so later the circles are evenly spaced. Got rid of the
underline under all the links*/
a {
    color: #F2F2F2;
    font-size: 1em;
    margin: 1em;
    margin-bottom: 20px;
    text-decoration: none;   
}

/*Created a solid border around all of the exercise links, and use the border radius to make them circles. Each circular border is filled with
a bright blue and the border color is matched. The padding is used all around for better spacinf and to make the circles full, without it they
are only skinny ovals*/
#exercises a {
    text-align: center;
    display: inline-block;
    border: 4px solid;
    border-radius: 50%;
    width: 90px;
    height: 80px;
    border-color: #4eadd8;
    background-color: #4eadd8;
    padding-left: 1em;
    padding-right: 1em;
    padding-top: 2.3em;
    padding-bottom: .3em;
    overflow-wrap: break-word;
}

/*Solid border added and then made circular. Filled with a bright blue and border color is matched. Padding is used to accomodate slightly
larger text than the exercises and to make the circles well-spaced and full.*/
#projects a {
    border: 4px solid;
    display: inline-block;
    border-radius: 50%;
    border-color: #4eadd8;
    background-color: #4eadd8;
    padding-left: 1em;
    padding-right: 1em;
    padding-top: 2.3em;
    padding-bottom: 2.3em;
    overflow-wrap: break-word;
}

/*When the exercise and project links are hovered over the background color becomes transparent and the border becomes dotted. The text
color changes so it's visible on the light background. Webkit transition is used so the background and text color change is more gradual
instead of isntant.*/
/* https://www.w3schools.com/css/css3_transitions.asp */
#projects a:hover, #exercises a:hover {
    -webkit-transition: color 800ms;
    transition: 800ms;
    color: #4eadd8;
    border: 4px dotted;
    border-color: #4eadd8;
    background-color: rgba(0, 0, 0, 0);
}

/*This includes the h3s and the projects and exercises ids. A dotted border is created and padding and margins are used to make the border
 centered on the image of me and so the links and h3s line up with the h1 and h2s.*/
.links {
    margin-top: 6em;
    margin-left: 9em;
    border-left: 2px dotted #8DA4AD;
    padding-left: 9em;
}

/*I created an animation called pop, which lasts for 1 second and only runs once on each reload of the page. It runs the frames in a linear
fashion (aka: it runs from the first to the last in chronological order). The both fill mode makes it so the last frame stays on the page
instead of fading away, which is the circles that contains the link.*/
/* https://www.w3schools.com/css/css3_animations.asp */
#projects a:nth-child(1){
    animation: pop 1s linear both;
}

#projects a:nth-child(2){
    animation: pop 1s .5s linear both;
}

#projects a:nth-child(3){
    animation: pop 1s 1s linear both;
}

#exercises a:nth-child(1){
    animation: pop 1s linear both;
}

#exercises a:nth-child(2){
    animation: pop 1s .2s linear both;
}

#exercises a:nth-child(3){
    animation: pop 1s .4s linear both;
}

#exercises a:nth-child(4){
    animation: pop 1s .6s linear both;
}

#exercises a:nth-child(5){
    animation: pop 1s .8s linear both;
}

#exercises a:nth-child(6){
    animation: pop 1s 1s linear both;
}

#exercises a:nth-child(7){
    animation: pop 1s 1.2s linear both;
}

#exercises a:nth-child(8){
    animation: pop 1s 1.4s linear both;
}

#exercises a:nth-child(9){
    animation: pop 1s 1.8s linear both;
}

#exercises a:nth-child(10){
    animation: pop 1s 2s linear both;
}

#exercises a:nth-child(11){
    animation: pop 1s 2.2s linear both;
}

#exercises a:nth-child(12){
    animation: pop 1s 2.4s linear both;
}

#exercises a:nth-child(13){
    animation: pop 1s 2.6s linear both;
}

#exercises a:nth-child(14){
    animation: pop 1s 2.8s linear both;
}

#exercises a:nth-child(15){
    animation: pop 1s 3s linear both;
}

#exercises a:nth-child(16){
    animation: pop 1s 3.2s linear both;
}

#exercises a:nth-child(17){
    animation: pop 1s 3.4s linear both;
}

#exercises a:nth-child(18){
    animation: pop 1s 3.6s linear both;
}

#exercises a:nth-child(19){
    animation: pop 1s 3.8s linear both;
}

#exercises a:nth-child(20){
    animation: pop 1s 4s linear both;
}

#exercises a:nth-child(21){
    animation: pop 1s 4.2s linear both;
}

#exercises a:nth-child(22){
    animation: pop 1s 4.4s linear both;
}

#exercises a:nth-child(23){
    animation: pop 1s 4.6s linear both;
}

#exercises a:nth-child(24){
    animation: pop 1s 4.8s linear both;
}

#exercises a:nth-child(25){
    animation: pop 1s 5s linear both;
}

#exercises a:nth-child(26){
    animation: pop 1s 5.2s linear both;
}

  /*This contains the frames for my pop animation. The frames are indicated by percentages, with 0 being the beginning and the 100% indicating
  the animation has run 100% of it's course. At 0%, the circles are scaled down. Then they scale up, and up again, then back down. This creates
  the "pop" effect of the circles getting larger and then going back down to their normal size.*/
  @keyframes pop {
    0% {transform: scale(.000000000002)}
    5% {transform: scale(.09); }
    30% {transform: scale(1); }
    50% { transform: scale(1.1); }
    70% {transform: scale(1); }
    100% { transform: scale(1); } 
 } 

